# quilde.github.io

./: README.md  index.html  main.css
.github/workflows/: rust.yml
blog/: arrow_components.js  build.js  build.mjs  header.js  index.html  index.md  package-lock.json  package.json  rss.xml  test.json
blog/posts/: id.css  indexdiachronica.html  stack.html  test.html
blog/projects/: id.css  indexdiachronica.html
blog/src/: indexdiachronica.md  stack.md  test.md
indexdiachronica/: afroasiatic.html  algonquin.html  austroasiatic.html  austronesian.html  demo.css  index.html  index.json
indexdiachronica/diachronica_leptos/: Cargo.toml
indexdiachronica/diachronica_leptos/src/: main.rs
indexdiachronica/index/: algonquin.json  austroasiatic.json  austronesian.json  empty.json  index.json
indexdiachronica/index2/: afroasiatic.json  algonquian.json  algonquin.json  austroasiatic.json  austronesian.json
indexdiachronica/index_json/: afroasiatic.json  afroasiatic_sources.json  algonquian.json  algonquian_sources.json  austroasiatic.json  austroasiatic_sources.json  austronesian.json  austronesian_sources.json
src/indexdiachronica/: afroasiatic.html  algonquin.html  austronesian.html
src/indexdiachronica/diachronica_leptos/: Cargo.toml
src/indexdiachronica/index/: austronesian.json
src/indexdiachronica/index2/: empty.json
