[package]
name = "diachronica_leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.3", features = ["csr", "nightly"] }
serde = { version = "1", features = ["derive"] }
reqwasm = "0.5"
pollster = "0.3.0"
thiserror = "1"
# wasm-bindgen = "0.2.90"